# l2MonETH

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  deployment.yaml  docker-compose.yml  kuma.yml  main.go  service.yaml
.claude/memory/: session-log.md
.claude/sessions/: .last_inbox_check
.claude/state/: changed-files.jsonl  instructions-loaded.jsonl  session-events.jsonl  session.events.jsonl  session.json  test-recommendation.json
.claude/state/sessions/: session-1784127097470503000.json
kuma-data/: kuma.db  kuma.db-shm  kuma.db-wal
src/: main.rs
tests/: build_config_test.rs
