[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
warp = "0.3"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"